--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "django (>=5.2.7,<6.0.0)",
     "psycopg2 (>=2.9.11,<3.0.0)",
     "pillow (>=12.0.0,<13.0.0)",
-    "ipython (>=9.6.0,<10.0.0)"
+    "ipython (>=9.6.0,<10.0.0)",
+    "pytils (>=0.4.4,<0.5.0)"
 ]
 
 
